--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -16,7 +16,7 @@
 android:layout_width="match_parent"
 android:layout_height="50dp"
 android:layout_marginTop="10dp"
-android:layout_marginRight="10dp"
+android:layout_marginRight="75dp"
 android:layout_marginLeft="10dp"
 android:elevation="10dp"
 android:background="@drawable/white_border"
@@ -30,17 +30,17 @@ android:id="@+id/relLayout1">
         android:layout_marginLeft="10dp"
         android:src="@drawable/ic_search"/>
 
-<AutoCompleteTextView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_toRightOf="@+id/ic_search"
-    android:singleLine="true"
-    android:layout_centerVertical="true"
-    android:textSize="15sp"
-    android:textColor="#000"
-    android:id="@+id/input_search"
-    android:background="@null"
-    android:hint="Enter Address, City or Zip Code"
-    android:imeOptions="actionSearch"/>
+    <AutoCompleteTextView
+        android:id="@+id/input_search"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/ic_search"
+        android:background="@null"
+        android:hint="Enter Address, City or Zip Code"
+        android:imeOptions="actionSearch"
+        android:singleLine="true"
+        android:textColor="#000"
+        android:textSize="15sp" />
 </RelativeLayout>
 </RelativeLayout>
